--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
 		<script type="text/javascript" src="js/resources.js"></script>
 
 		<script type="text/javascript" src="js/entities/BaseEntity.js"></script>
+		<script type="text/javascript" src="js/entities/ProjectileEntity.js"></script>
+		<script type="text/javascript" src="js/entities/WeaponEntity.js"></script>
 		<script type="text/javascript" src="js/entities/entities.js"></script>
 		<script type="text/javascript" src="js/entities/HUD.js"></script>
 
