--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
 		<script type="text/javascript" src="js/entities/BaseEntity.js"></script>
 		<script type="text/javascript" src="js/entities/BulletEntity.js"></script>
-		<script type="text/javascript" src="js/entities/entities.js"></script>
+		<script type="text/javascript" src="js/entities/PlayerEntity.js"></script>
 		<script type="text/javascript" src="js/entities/HUD.js"></script>
 
 		<script type="text/javascript" src="js/screens/title.js"></script>
