--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,12 @@
 		<script type="text/javascript" src="js/game.js"></script>
 		<script type="text/javascript" src="js/resources.js"></script>
 
+		<script type="text/javascript" src="js/Pathfinding.js"></script>
 		<script type="text/javascript" src="js/entities/BaseEntity.js"></script>
 		<script type="text/javascript" src="js/entities/BulletEntity.js"></script>
 		<script type="text/javascript" src="js/entities/PlayerEntity.js"></script>
+		<script type="text/javascript" src="js/entities/PathNodeEntity.js"></script>
+		<script type="text/javascript" src="js/entities/PlatformArea.js"></script>
 		<script type="text/javascript" src="js/entities/HUD.js"></script>
 
 		<script type="text/javascript" src="js/screens/title.js"></script>
