Added spawners, changed map tileset, other changes

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
 		<script type="text/javascript" src="js/entities/BulletEntity.js"></script>
 		<script type="text/javascript" src="js/entities/EnemyEntity.js"></script>
 		<script type="text/javascript" src="js/entities/PlayerEntity.js"></script>
+		<script type="text/javascript" src="js/entities/SpawnerEntity.js"></script>
 		<script type="text/javascript" src="js/entities/PathNodeEntity.js"></script>
 		<script type="text/javascript" src="js/entities/PlatformArea.js"></script>
 		<script type="text/javascript" src="js/entities/HUD.js"></script>
