--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 		<script type="text/javascript" src="js/game.js"></script>
 		<script type="text/javascript" src="js/resources.js"></script>
 
-		<script type="text/javascript" src="js/Pathfinding.js"></script>
+		<script type="text/javascript" src="js/PathFinding.js"></script>
 		<script type="text/javascript" src="js/entities/BaseEntity.js"></script>
 		<script type="text/javascript" src="js/entities/BulletEntity.js"></script>
 		<script type="text/javascript" src="js/entities/EnemyEntity.js"></script>
